--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@
 	<script src="x-frame-bypass.js" type="module"></script>
 </head>
 <body>
-	<iframe is="x-frame-bypass" src="https://script.google.com/macros/s/AKfycbySuQ4cRUOhdcfUxbemoWNEYql_poYme6hMjmJlNZtPEDZrx-8IMQb0GZtg-soO9I1V/exec"></iframe>
+	<iframe is="x-frame-bypass" src="https://vnexpress.net/"></iframe>
 </body>
 </html>
