--- a/index.html
+++ b/index.html
@@ -1,32 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="X-Frame-Bypass: Web Component extending IFrame to bypass X-Frame-Options: deny/sameorigin">
-	<title>X-Frame-Bypass Web Component Demo</title>
-	<style>
-		html, body {
-			margin: 0;
-			padding: 0;
-			height: 100%;
-			overflow: hidden;
-		}
-		iframe {
-			display: block;
-			width: calc(100% - 40px);
-			height: calc(100% - 40px);
-			margin: 20px;
-		}
-		img {
-			position: absolute;
-			top: 0;
-			right: 0;
-		}
-	</style>
-	<script src="x-frame-bypass.js" type="module"></script>
-</head>
-<body>
-	<iframe is="x-frame-bypass" src="https://vnexpress.net/"></iframe>
-</body>
-</html>
+<iframe src="https://script.google.com/macros/s/AKfycbySuQ4cRUOhdcfUxbemoWNEYql_poYme6hMjmJlNZtPEDZrx-8IMQb0GZtg-soO9I1V/exec" title="W3Schools Free Online Web Tutorials"></iframe>
